infra/k8s-dev/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client 
  template:
    metadata:
      labels:
        app: client 
    spec:
      containers:
        - name: client
          image: lightcoker/passmanager-client 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          # env:
          #   - name: LINK_PREVIEW_KEY
          #     valueFrom:
          #       secretKeyRef:
          #         name: lpkey
          #         key: LINK_PREVIEW_KEY
---
apiVersion: v1
kind: Service
metadata: 
  name: client-clusterip 
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
